Don't use arrays of generic objects